--- a/src/styles/LastVehiclesAdded.css
+++ b/src/styles/LastVehiclesAdded.css
@@ -30,6 +30,7 @@
 	.latest-vehicles-added-article {
 		width: 18rem;
 		margin: 0;
+		align-items: center;
 	}
 }
 
@@ -66,6 +67,12 @@
 	cursor: pointer;
 	margin-top: 1rem;
 	margin-top: auto;
+}
+
+@media screen and (width > 800px) {
+	.latest-vehicles-added-button {
+		font-size: .8rem;
+	}
 }
 
 .latest-vehicles-added-title {
