--- a/src/styles/LastVehiclesAdded.css
+++ b/src/styles/LastVehiclesAdded.css
@@ -23,7 +23,7 @@
 	display: flex;
 	gap: 1rem;
 	margin: 0 auto;
-	padding: .5rem;
+	padding: .4rem .5rem;
 }
 
 @media (width > 700px) {
@@ -51,6 +51,13 @@
 	display: flex;
 	flex-direction: column;
 	flex: 1;
+	justify-content: space-between;
+}
+
+@media screen and (width > 700px) {
+	.latest-vehicles-added-infos {
+		height: 100%;
+	}
 }
 
 .link-to-fullcard-vehicle {
