--- a/src/styles/Buy.css
+++ b/src/styles/Buy.css
@@ -25,26 +25,17 @@
 }
 
 .filter-vehicles-list {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	gap: 1rem;
-	width: 90%;
+	display: grid;
 	margin: 0 auto;
-	margin-top: 1rem;
+	width: 90%;
+	grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
+	justify-items: center;
+	align-items: center;
+	margin-top: 2rem;
+	gap: 1rem;
 }
 
 .empty-vehicle-filter-list {
 	margin: 0 auto;
 	margin-top: 5rem;
-}
-
-@media screen and (width > 700px) {
-	.filter-vehicles-list {
-		display: grid;
-		width: 100%;
-		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-		justify-items: center;
-		align-items: center;
-	}
 }
