--- a/src/styles/LastVehiclesAdded.css
+++ b/src/styles/LastVehiclesAdded.css
@@ -39,7 +39,6 @@
 	display: flex;
 	flex-direction: column;
 	width: fit-content;
-	justify-content: space-between;
 }
 
 @media screen and (width > 700px) {
@@ -61,8 +60,8 @@
 	padding: .5rem 2rem;
 	border-radius: .5rem;
 	cursor: pointer;
-	margin-top: 1rem;
-	margin-top: auto;
+	/* margin-top: 1rem;
+	margin-top: auto; */
 }
 
 @media screen and (width > 800px) {
