--- a/src/styles/LastVehiclesAdded.css
+++ b/src/styles/LastVehiclesAdded.css
@@ -17,10 +17,12 @@
 
 .latest-vehicles-added-article {
 	border: 2px solid #989898;
-	width: 8rem;
+	width: 11rem;
 	border-radius: 1rem;
 	margin: 0 auto;
 	padding: .4rem .5rem;
+	display: flex;
+	flex-direction: column;
 }
 
 @media screen and (width > 750px) {
@@ -39,12 +41,10 @@
 	display: flex;
 	flex-direction: column;
 	width: fit-content;
-}
-
-@media screen and (width > 700px) {
-	.latest-vehicles-added-infos {
-		height: 100%;
-	}
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .link-to-fullcard-vehicle {
@@ -60,8 +60,6 @@
 	padding: .5rem 2rem;
 	border-radius: .5rem;
 	cursor: pointer;
-	/* margin-top: 1rem;
-	margin-top: auto; */
 }
 
 @media screen and (width > 800px) {
