--- a/src/styles/LastVehiclesAdded.css
+++ b/src/styles/LastVehiclesAdded.css
@@ -6,13 +6,10 @@
 	gap: 1rem;
 }
 
-@media screen and (width > 750px) {
-	.list-last-vehicles-container {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		gap: 1rem;
-	}
+.list-last-vehicles-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
+	gap: 1rem;
 }
 
 .latest-vehicles-added-article {
@@ -75,10 +72,4 @@
 .latest-vehicles-added-price {
 	font-size: .9rem;
 	font-weight: 100;
-}
-
-.list-last-vehicles-container {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
 }
